Added download file and fixed links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="jumbotron">
 			<h1>Bumping Bunnies</h1>
 			<p>
-				Bumping bunnies is a remake of <a href="xxx">Jump'n'Bump</a> (1992).<br />
+				Bumping bunnies is a remake of <a href="http://brainchilddesign.com/Bottom.php?Page=Games&SubPage=JnB">Jump'n Bump</a>.<br />
 				Play against friends on a single PC, via WLAN or Bluetooth.
 			</p>
 		</div>
@@ -74,18 +74,18 @@
 
 		<h1 class="page-header" id="instructions">Instructions for PC and MAC</h1>
 
-		Download <a href="files/bumping-bunnies-pc.jar">bumping-bunnies.jar</a><br />
-		<a href="xxx">Java 8</a> is required.
+		Download <a href="files/bumping-bunnies.jar">bumping-bunnies.jar</a><br />
+		<a href="https://java.com/en/download/">Java 8</a> is required.
 		<p />
 
 		<ol>
 			<li>Install Java 8 if necessary.</li>
-			<li>Double click bumping-bunnies.jar<br /> Or start via command
+			<li>Double click bumping-bunnies.jar<br /> Or start it via command
 				line: <code> java -jar bumping-bunnies.jar</code></li>
 		</ol>
 		<h1 class="page-header" id="opensource">Open source</h1>
 		Bumping bunnies is open source. You can view the source on <a
-			href="xxx">Github</a>.
+			href="TODO">Github</a>.
 			
 		<h1 class="page-header" id="contact">Contact</h1>
 		Contact me via <a href="replace-me"  id="mail">E-Mail</a>
