--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 		<h1 class="page-header" id="download">Download</h1>
 		<p>
-			<a href="#" class="btn btn-primary btn-lg" role="button">Android
-				&raquo;</a> <a href="#" class="btn btn-primary btn-lg" role="button">PC
+			<a href="https://play.google.com/store/apps/details?id=de.oetting.bumpingbunnies" class="btn btn-primary btn-lg" role="button">Android
+				&raquo;</a> <a href="files/bumping-bunnies.jar" class="btn btn-primary btn-lg" role="button">PC
 				and MAC &raquo;</a>
 		</p>
 
