--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="">
 <link rel="icon" href="../../favicon.ico">
 
-<title>Bumping bunnies</title>
+<title>Bumping Bunnies</title>
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -93,8 +93,8 @@
 					command line: <code> java -jar bumping-bunnies.jar</code></li>
 			</ol>
 			<h1 class="page-header" id="opensource">Open source</h1>
-			Bumping bunnies is open source. You can view the source on <a
-				href="TODO">Github</a>.
+			Bumping Bunnies is open source. You can view the source on <a
+				href="#TODO">Github</a>.
 
 			<h1 class="page-header" id="contact">Contact</h1>
 			Contact me via <a href="replace-me" id="mail">E-Mail</a>
