--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<p>
 					Bumping bunnies is a remake of <a
 						href="http://brainchilddesign.com/Bottom.php?Page=Games&SubPage=JnB">Jump'n
-						Bump</a>.<br /> Play against friends on a single PC, via WLAN or
+						Bump</a>.<br /> Play against friends or the AI on a single PC, via WLAN or
 					Bluetooth.
 				</p>
 			</div>
@@ -79,6 +79,11 @@
 					role="button">PC and MAC &raquo;</a>
 			</p>
 
+			<h1 class="page-header" id="instructions">Instructions for Android</h1>
+			<ol>
+				<li>Join the beta testing group <a href="https://groups.google.com/forum/#!forum/bumping-bunnies-beta-testers">here.</a></li>
+				<li>Download the game from the <a href="https://play.google.com/store/apps/details?id=de.oetting.bumpingbunnies">play store.</a></li>
+			</ol>
 			<h1 class="page-header" id="instructions">Instructions for PC
 				and MAC</h1>
 
@@ -93,7 +98,7 @@
 			</ol>
 			<h1 class="page-header" id="opensource">Open source</h1>
 			Bumping Bunnies is open source. You can view the source on <a
-				href="#TODO">Github</a>.
+				href="https://github.com/hinnerkoetting/bumpingbunnies">Github</a>.
 
 			<h1 class="page-header" id="contact">Contact</h1>
 			Contact me via <a href="replace-me" id="mail">E-Mail</a>
