Added link to polymer page and twitter link

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 				href="https://github.com/hinnerkoetting/bumpingbunnies">Github</a>.
 
 			<h1 class="page-header" id="contact">Contact</h1>
-			Contact me via <a href="replace-me" id="mail">E-Mail</a>
+			Contact me via <a href="replace-me" id="mail">E-Mail</a><br/>
 
+			<h1 class="page-header">New page</h1>
+			Try the new <a href="polymer/index.html">page</a>.
 			<script src="js/jquery.min.js"></script>
 			<script type="text/javascript">
 			function replaceEmail() {
