--- a/polymer/element.html
+++ b/polymer/element.html
@@ -61,7 +61,10 @@
         <contact-card  class="layout horizontal starred">
           <img src="images/contact.png" alt="contact" class="circle"/>
           <div class="flex self-center" style="margin-left: 15px;">
-            Hinnerk Oetting
+            <a class="twitter-follow-button"
+            href="https://twitter.com/HinnerkOetting" data-show-count="false">
+            <div
+                  Follow @HinnerkOetting</a>
           </div>
         </contact-card>
       </paper-material>
@@ -90,6 +93,23 @@
         videoId: 'ckGZs2ei7nE'
       });
     }
+
+    window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));
     </script>
 
   </polymer-element>
