Added some effects

--- a/polymer/element.html
+++ b/polymer/element.html
@@ -7,6 +7,8 @@
   <style>
 
 
+
+
   </style>
   <paper-header-panel id="core_header_panel" mode="waterfall" shadow="true" z="5">
     <paper-toolbar id="core_toolbar" >
@@ -20,15 +22,18 @@
 
 
       <paper-material elevation="3" id="intro" class="card">
+        <paper-ripple fit></paper-ripple>
         <h1 id="home">Bumping Bunnies</h1>
         <p>
           Bumping bunnies is a remake of <a
             href="http://brainchilddesign.com/Bottom.php?Page=Games&SubPage=JnB">Jump'n
             Bump</a>.<br /> You can play against your friends via WIFI or Bluetooth or on the same PC.<br/>
         </p>
+
       </paper-material>
 
       <paper-material elevation="3"  id="download" class="card">
+        <paper-ripple fit></paper-ripple>
         <h1 id="home">Download</h1>
         <p>
 
@@ -45,6 +50,7 @@
       </paper-material>
 
       <paper-material elevation="3" class="screenshotCard">
+        <paper-ripple fit></paper-ripple>
             <iron-image src="images/screenshot.png" id="screenshot"  preload fade  sizing="cover"/>
       </paper-material>
 
@@ -52,11 +58,13 @@
 
 
       <paper-material elevation="3" class="card" id="youtubeCard">
+        <paper-ripple fit></paper-ripple>
         <h1 id="home">Watch on Youtube</h1>
         <div id="ytplayer"></div>
       </paper-material>
 
       <paper-material elevation="3" class="card" id="contact">
+        <paper-ripple fit></paper-ripple>
         <h1 id="home">Contact</h1>
         <contact-card  class="layout horizontal starred">
           <img src="images/contact.png" alt="contact" class="circle"/>
