--- a/polymer/index.html
+++ b/polymer/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="elements.html">
+<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+<link rel="import" href="elements.html">
 <link rel="import" href="element.html">
 
+  <title>Bumping Bunnies</title>
 </head>
 <body  fullbleed vertical layout >
 
 
-  <bunnies-element></bunnies-element>  
+  <bunnies-element></bunnies-element>
 
 
 </body>
